level-zero/1.2.13/_sources/core/api.rst.txt


==============================
Core API
==============================
oneAPI Level Zero Specification - Version 1.2.13

 

 

Common
============================================================
* Enumerations


    * :ref:`ze-result-t`
    * :ref:`ze-structure-type-t`
    * :ref:`ze-external-memory-type-flags-t`

 
* Structures


    * :ref:`ze-ipc-mem-handle-t`
    * :ref:`ze-ipc-event-pool-handle-t`
    * :ref:`ze-base-properties-t`
    * :ref:`ze-base-desc-t`




Common Enums
------------------------------------------------------------------------------


.. _ze-result-t:

ze_result_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_result_t
    :project: LevelZero


.. _ze-structure-type-t:

ze_structure_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_structure_type_t
    :project: LevelZero


.. _ze-external-memory-type-flags-t:

ze_external_memory_type_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_external_memory_type_flag_t
    :project: LevelZero

 
Common Structures
------------------------------------------------------------------------------

.. _ze-ipc-mem-handle-t:

ze_ipc_mem_handle_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_ipc_mem_handle_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-ipc-event-pool-handle-t:

ze_ipc_event_pool_handle_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_ipc_event_pool_handle_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-base-properties-t:

ze_base_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_base_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-base-desc-t:

ze_base_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_base_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Driver
============================================================
* Functions


    * :ref:`zeInit`
    * :ref:`zeDriverGet`
    * :ref:`zeDriverGetApiVersion`
    * :ref:`zeDriverGetProperties`
    * :ref:`zeDriverGetIpcProperties`
    * :ref:`zeDriverGetExtensionProperties`
    * :ref:`zeDriverGetExtensionFunctionAddress`

 
* Enumerations


    * :ref:`ze-init-flags-t`
    * :ref:`ze-api-version-t`
    * :ref:`ze-ipc-property-flags-t`

 
* Structures


    * :ref:`ze-driver-uuid-t`
    * :ref:`ze-driver-properties-t`
    * :ref:`ze-driver-ipc-properties-t`
    * :ref:`ze-driver-extension-properties-t`


Driver Functions
------------------------------------------------------------------------------


.. _zeInit:

zeInit
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeInit
    :project: LevelZero


.. _zeDriverGet:

zeDriverGet
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGet
    :project: LevelZero


.. _zeDriverGetApiVersion:

zeDriverGetApiVersion
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGetApiVersion
    :project: LevelZero


.. _zeDriverGetProperties:

zeDriverGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGetProperties
    :project: LevelZero


.. _zeDriverGetIpcProperties:

zeDriverGetIpcProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGetIpcProperties
    :project: LevelZero


.. _zeDriverGetExtensionProperties:

zeDriverGetExtensionProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGetExtensionProperties
    :project: LevelZero


.. _zeDriverGetExtensionFunctionAddress:

zeDriverGetExtensionFunctionAddress
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDriverGetExtensionFunctionAddress
    :project: LevelZero



Driver Enums
------------------------------------------------------------------------------


.. _ze-init-flags-t:

ze_init_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_init_flag_t
    :project: LevelZero


.. _ze-api-version-t:

ze_api_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_api_version_t
    :project: LevelZero


.. _ze-ipc-property-flags-t:

ze_ipc_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_ipc_property_flag_t
    :project: LevelZero

 
Driver Structures
------------------------------------------------------------------------------

.. _ze-driver-uuid-t:

ze_driver_uuid_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_driver_uuid_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-driver-properties-t:

ze_driver_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_driver_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-driver-ipc-properties-t:

ze_driver_ipc_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_driver_ipc_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-driver-extension-properties-t:

ze_driver_extension_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_driver_extension_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Device
============================================================
* Functions


    * :ref:`zeDeviceGet`
    * :ref:`zeDeviceGetSubDevices`
    * :ref:`zeDeviceGetProperties`
    * :ref:`zeDeviceGetComputeProperties`
    * :ref:`zeDeviceGetModuleProperties`
    * :ref:`zeDeviceGetCommandQueueGroupProperties`
    * :ref:`zeDeviceGetMemoryProperties`
    * :ref:`zeDeviceGetMemoryAccessProperties`
    * :ref:`zeDeviceGetCacheProperties`
    * :ref:`zeDeviceGetImageProperties`
    * :ref:`zeDeviceGetExternalMemoryProperties`
    * :ref:`zeDeviceGetP2PProperties`
    * :ref:`zeDeviceCanAccessPeer`
    * :ref:`zeDeviceGetStatus`
    * :ref:`zeDeviceGetGlobalTimestamps`

 
* Enumerations


    * :ref:`ze-device-type-t`
    * :ref:`ze-device-property-flags-t`
    * :ref:`ze-device-module-flags-t`
    * :ref:`ze-device-fp-flags-t`
    * :ref:`ze-command-queue-group-property-flags-t`
    * :ref:`ze-device-memory-property-flags-t`
    * :ref:`ze-memory-access-cap-flags-t`
    * :ref:`ze-device-cache-property-flags-t`
    * :ref:`ze-device-p2p-property-flags-t`

 
* Structures


    * :ref:`ze-device-uuid-t`
    * :ref:`ze-device-properties-t`
    * :ref:`ze-device-thread-t`
    * :ref:`ze-device-compute-properties-t`
    * :ref:`ze-native-kernel-uuid-t`
    * :ref:`ze-device-module-properties-t`
    * :ref:`ze-command-queue-group-properties-t`
    * :ref:`ze-device-memory-properties-t`
    * :ref:`ze-device-memory-access-properties-t`
    * :ref:`ze-device-cache-properties-t`
    * :ref:`ze-device-image-properties-t`
    * :ref:`ze-device-external-memory-properties-t`
    * :ref:`ze-device-p2p-properties-t`


Device Functions
------------------------------------------------------------------------------


.. _zeDeviceGet:

zeDeviceGet
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGet
    :project: LevelZero


.. _zeDeviceGetSubDevices:

zeDeviceGetSubDevices
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetSubDevices
    :project: LevelZero


.. _zeDeviceGetProperties:

zeDeviceGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetProperties
    :project: LevelZero


.. _zeDeviceGetComputeProperties:

zeDeviceGetComputeProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetComputeProperties
    :project: LevelZero


.. _zeDeviceGetModuleProperties:

zeDeviceGetModuleProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetModuleProperties
    :project: LevelZero


.. _zeDeviceGetCommandQueueGroupProperties:

zeDeviceGetCommandQueueGroupProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetCommandQueueGroupProperties
    :project: LevelZero


.. _zeDeviceGetMemoryProperties:

zeDeviceGetMemoryProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetMemoryProperties
    :project: LevelZero


.. _zeDeviceGetMemoryAccessProperties:

zeDeviceGetMemoryAccessProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetMemoryAccessProperties
    :project: LevelZero


.. _zeDeviceGetCacheProperties:

zeDeviceGetCacheProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetCacheProperties
    :project: LevelZero


.. _zeDeviceGetImageProperties:

zeDeviceGetImageProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetImageProperties
    :project: LevelZero


.. _zeDeviceGetExternalMemoryProperties:

zeDeviceGetExternalMemoryProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetExternalMemoryProperties
    :project: LevelZero


.. _zeDeviceGetP2PProperties:

zeDeviceGetP2PProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetP2PProperties
    :project: LevelZero


.. _zeDeviceCanAccessPeer:

zeDeviceCanAccessPeer
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceCanAccessPeer
    :project: LevelZero


.. _zeDeviceGetStatus:

zeDeviceGetStatus
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetStatus
    :project: LevelZero


.. _zeDeviceGetGlobalTimestamps:

zeDeviceGetGlobalTimestamps
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceGetGlobalTimestamps
    :project: LevelZero



Device Enums
------------------------------------------------------------------------------


.. _ze-device-type-t:

ze_device_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_type_t
    :project: LevelZero


.. _ze-device-property-flags-t:

ze_device_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_property_flag_t
    :project: LevelZero


.. _ze-device-module-flags-t:

ze_device_module_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_module_flag_t
    :project: LevelZero


.. _ze-device-fp-flags-t:

ze_device_fp_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_fp_flag_t
    :project: LevelZero


.. _ze-command-queue-group-property-flags-t:

ze_command_queue_group_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_command_queue_group_property_flag_t
    :project: LevelZero


.. _ze-device-memory-property-flags-t:

ze_device_memory_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_memory_property_flag_t
    :project: LevelZero


.. _ze-memory-access-cap-flags-t:

ze_memory_access_cap_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_memory_access_cap_flag_t
    :project: LevelZero


.. _ze-device-cache-property-flags-t:

ze_device_cache_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_cache_property_flag_t
    :project: LevelZero


.. _ze-device-p2p-property-flags-t:

ze_device_p2p_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_p2p_property_flag_t
    :project: LevelZero

 
Device Structures
------------------------------------------------------------------------------

.. _ze-device-uuid-t:

ze_device_uuid_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_uuid_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-properties-t:

ze_device_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-thread-t:

ze_device_thread_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_thread_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-compute-properties-t:

ze_device_compute_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_compute_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-native-kernel-uuid-t:

ze_native_kernel_uuid_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_native_kernel_uuid_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-module-properties-t:

ze_device_module_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_module_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-command-queue-group-properties-t:

ze_command_queue_group_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_command_queue_group_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-memory-properties-t:

ze_device_memory_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_memory_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-memory-access-properties-t:

ze_device_memory_access_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_memory_access_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-cache-properties-t:

ze_device_cache_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_cache_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-image-properties-t:

ze_device_image_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_image_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-external-memory-properties-t:

ze_device_external_memory_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_external_memory_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-device-p2p-properties-t:

ze_device_p2p_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_p2p_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Context
============================================================
* Functions


    * :ref:`zeContextCreate`
    * :ref:`zeContextCreateEx`
    * :ref:`zeContextDestroy`
    * :ref:`zeContextGetStatus`

 
* Enumerations


    * :ref:`ze-context-flags-t`

 
* Structures


    * :ref:`ze-context-desc-t`


Context Functions
------------------------------------------------------------------------------


.. _zeContextCreate:

zeContextCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextCreate
    :project: LevelZero


.. _zeContextCreateEx:

zeContextCreateEx
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextCreateEx
    :project: LevelZero


.. _zeContextDestroy:

zeContextDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextDestroy
    :project: LevelZero


.. _zeContextGetStatus:

zeContextGetStatus
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextGetStatus
    :project: LevelZero



Context Enums
------------------------------------------------------------------------------


.. _ze-context-flags-t:

ze_context_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_context_flag_t
    :project: LevelZero

 
Context Structures
------------------------------------------------------------------------------

.. _ze-context-desc-t:

ze_context_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_context_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Cmdqueue
============================================================
* Functions


    * :ref:`zeCommandQueueCreate`
    * :ref:`zeCommandQueueDestroy`
    * :ref:`zeCommandQueueExecuteCommandLists`
    * :ref:`zeCommandQueueSynchronize`

 
* Enumerations


    * :ref:`ze-command-queue-flags-t`
    * :ref:`ze-command-queue-mode-t`
    * :ref:`ze-command-queue-priority-t`

 
* Structures


    * :ref:`ze-command-queue-desc-t`


Cmdqueue Functions
------------------------------------------------------------------------------


.. _zeCommandQueueCreate:

zeCommandQueueCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandQueueCreate
    :project: LevelZero


.. _zeCommandQueueDestroy:

zeCommandQueueDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandQueueDestroy
    :project: LevelZero


.. _zeCommandQueueExecuteCommandLists:

zeCommandQueueExecuteCommandLists
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandQueueExecuteCommandLists
    :project: LevelZero


.. _zeCommandQueueSynchronize:

zeCommandQueueSynchronize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandQueueSynchronize
    :project: LevelZero



Cmdqueue Enums
------------------------------------------------------------------------------


.. _ze-command-queue-flags-t:

ze_command_queue_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_command_queue_flag_t
    :project: LevelZero


.. _ze-command-queue-mode-t:

ze_command_queue_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_command_queue_mode_t
    :project: LevelZero


.. _ze-command-queue-priority-t:

ze_command_queue_priority_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_command_queue_priority_t
    :project: LevelZero

 
Cmdqueue Structures
------------------------------------------------------------------------------

.. _ze-command-queue-desc-t:

ze_command_queue_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_command_queue_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Cmdlist
============================================================
* Functions


    * :ref:`zeCommandListCreate`
    * :ref:`zeCommandListCreateImmediate`
    * :ref:`zeCommandListDestroy`
    * :ref:`zeCommandListClose`
    * :ref:`zeCommandListReset`
    * :ref:`zeCommandListAppendWriteGlobalTimestamp`

 
* Enumerations


    * :ref:`ze-command-list-flags-t`

 
* Structures


    * :ref:`ze-command-list-desc-t`


Cmdlist Functions
------------------------------------------------------------------------------


.. _zeCommandListCreate:

zeCommandListCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListCreate
    :project: LevelZero


.. _zeCommandListCreateImmediate:

zeCommandListCreateImmediate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListCreateImmediate
    :project: LevelZero


.. _zeCommandListDestroy:

zeCommandListDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListDestroy
    :project: LevelZero


.. _zeCommandListClose:

zeCommandListClose
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListClose
    :project: LevelZero


.. _zeCommandListReset:

zeCommandListReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListReset
    :project: LevelZero


.. _zeCommandListAppendWriteGlobalTimestamp:

zeCommandListAppendWriteGlobalTimestamp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendWriteGlobalTimestamp
    :project: LevelZero



Cmdlist Enums
------------------------------------------------------------------------------


.. _ze-command-list-flags-t:

ze_command_list_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_command_list_flag_t
    :project: LevelZero

 
Cmdlist Structures
------------------------------------------------------------------------------

.. _ze-command-list-desc-t:

ze_command_list_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_command_list_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Barrier
============================================================
* Functions


    * :ref:`zeCommandListAppendBarrier`
    * :ref:`zeCommandListAppendMemoryRangesBarrier`
    * :ref:`zeContextSystemBarrier`

 

 


Barrier Functions
------------------------------------------------------------------------------


.. _zeCommandListAppendBarrier:

zeCommandListAppendBarrier
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendBarrier
    :project: LevelZero


.. _zeCommandListAppendMemoryRangesBarrier:

zeCommandListAppendMemoryRangesBarrier
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryRangesBarrier
    :project: LevelZero


.. _zeContextSystemBarrier:

zeContextSystemBarrier
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextSystemBarrier
    :project: LevelZero



 

 

Copy
============================================================
* Functions


    * :ref:`zeCommandListAppendMemoryCopy`
    * :ref:`zeCommandListAppendMemoryFill`
    * :ref:`zeCommandListAppendMemoryCopyRegion`
    * :ref:`zeCommandListAppendMemoryCopyFromContext`
    * :ref:`zeCommandListAppendImageCopy`
    * :ref:`zeCommandListAppendImageCopyRegion`
    * :ref:`zeCommandListAppendImageCopyToMemory`
    * :ref:`zeCommandListAppendImageCopyFromMemory`
    * :ref:`zeCommandListAppendMemoryPrefetch`
    * :ref:`zeCommandListAppendMemAdvise`

 
* Enumerations


    * :ref:`ze-memory-advice-t`

 
* Structures


    * :ref:`ze-copy-region-t`
    * :ref:`ze-image-region-t`


Copy Functions
------------------------------------------------------------------------------


.. _zeCommandListAppendMemoryCopy:

zeCommandListAppendMemoryCopy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryCopy
    :project: LevelZero


.. _zeCommandListAppendMemoryFill:

zeCommandListAppendMemoryFill
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryFill
    :project: LevelZero


.. _zeCommandListAppendMemoryCopyRegion:

zeCommandListAppendMemoryCopyRegion
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryCopyRegion
    :project: LevelZero


.. _zeCommandListAppendMemoryCopyFromContext:

zeCommandListAppendMemoryCopyFromContext
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryCopyFromContext
    :project: LevelZero


.. _zeCommandListAppendImageCopy:

zeCommandListAppendImageCopy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendImageCopy
    :project: LevelZero


.. _zeCommandListAppendImageCopyRegion:

zeCommandListAppendImageCopyRegion
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendImageCopyRegion
    :project: LevelZero


.. _zeCommandListAppendImageCopyToMemory:

zeCommandListAppendImageCopyToMemory
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendImageCopyToMemory
    :project: LevelZero


.. _zeCommandListAppendImageCopyFromMemory:

zeCommandListAppendImageCopyFromMemory
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendImageCopyFromMemory
    :project: LevelZero


.. _zeCommandListAppendMemoryPrefetch:

zeCommandListAppendMemoryPrefetch
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemoryPrefetch
    :project: LevelZero


.. _zeCommandListAppendMemAdvise:

zeCommandListAppendMemAdvise
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendMemAdvise
    :project: LevelZero



Copy Enums
------------------------------------------------------------------------------


.. _ze-memory-advice-t:

ze_memory_advice_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_memory_advice_t
    :project: LevelZero

 
Copy Structures
------------------------------------------------------------------------------

.. _ze-copy-region-t:

ze_copy_region_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_copy_region_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-image-region-t:

ze_image_region_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_region_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Event
============================================================
* Functions


    * :ref:`zeEventPoolCreate`
    * :ref:`zeEventPoolDestroy`
    * :ref:`zeEventCreate`
    * :ref:`zeEventDestroy`
    * :ref:`zeEventPoolGetIpcHandle`
    * :ref:`zeEventPoolOpenIpcHandle`
    * :ref:`zeEventPoolCloseIpcHandle`
    * :ref:`zeCommandListAppendSignalEvent`
    * :ref:`zeCommandListAppendWaitOnEvents`
    * :ref:`zeEventHostSignal`
    * :ref:`zeEventHostSynchronize`
    * :ref:`zeEventQueryStatus`
    * :ref:`zeCommandListAppendEventReset`
    * :ref:`zeEventHostReset`
    * :ref:`zeEventQueryKernelTimestamp`
    * :ref:`zeCommandListAppendQueryKernelTimestamps`

 
* Enumerations


    * :ref:`ze-event-pool-flags-t`
    * :ref:`ze-event-scope-flags-t`

 
* Structures


    * :ref:`ze-event-pool-desc-t`
    * :ref:`ze-event-desc-t`
    * :ref:`ze-kernel-timestamp-data-t`
    * :ref:`ze-kernel-timestamp-result-t`


Event Functions
------------------------------------------------------------------------------


.. _zeEventPoolCreate:

zeEventPoolCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventPoolCreate
    :project: LevelZero


.. _zeEventPoolDestroy:

zeEventPoolDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventPoolDestroy
    :project: LevelZero


.. _zeEventCreate:

zeEventCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventCreate
    :project: LevelZero


.. _zeEventDestroy:

zeEventDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventDestroy
    :project: LevelZero


.. _zeEventPoolGetIpcHandle:

zeEventPoolGetIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventPoolGetIpcHandle
    :project: LevelZero


.. _zeEventPoolOpenIpcHandle:

zeEventPoolOpenIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventPoolOpenIpcHandle
    :project: LevelZero


.. _zeEventPoolCloseIpcHandle:

zeEventPoolCloseIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventPoolCloseIpcHandle
    :project: LevelZero


.. _zeCommandListAppendSignalEvent:

zeCommandListAppendSignalEvent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendSignalEvent
    :project: LevelZero


.. _zeCommandListAppendWaitOnEvents:

zeCommandListAppendWaitOnEvents
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendWaitOnEvents
    :project: LevelZero


.. _zeEventHostSignal:

zeEventHostSignal
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventHostSignal
    :project: LevelZero


.. _zeEventHostSynchronize:

zeEventHostSynchronize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventHostSynchronize
    :project: LevelZero


.. _zeEventQueryStatus:

zeEventQueryStatus
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventQueryStatus
    :project: LevelZero


.. _zeCommandListAppendEventReset:

zeCommandListAppendEventReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendEventReset
    :project: LevelZero


.. _zeEventHostReset:

zeEventHostReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventHostReset
    :project: LevelZero


.. _zeEventQueryKernelTimestamp:

zeEventQueryKernelTimestamp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventQueryKernelTimestamp
    :project: LevelZero


.. _zeCommandListAppendQueryKernelTimestamps:

zeCommandListAppendQueryKernelTimestamps
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendQueryKernelTimestamps
    :project: LevelZero



Event Enums
------------------------------------------------------------------------------


.. _ze-event-pool-flags-t:

ze_event_pool_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_event_pool_flag_t
    :project: LevelZero


.. _ze-event-scope-flags-t:

ze_event_scope_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_event_scope_flag_t
    :project: LevelZero

 
Event Structures
------------------------------------------------------------------------------

.. _ze-event-pool-desc-t:

ze_event_pool_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_event_pool_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-event-desc-t:

ze_event_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_event_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-timestamp-data-t:

ze_kernel_timestamp_data_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_timestamp_data_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-timestamp-result-t:

ze_kernel_timestamp_result_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_timestamp_result_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Fence
============================================================
* Functions


    * :ref:`zeFenceCreate`
    * :ref:`zeFenceDestroy`
    * :ref:`zeFenceHostSynchronize`
    * :ref:`zeFenceQueryStatus`
    * :ref:`zeFenceReset`

 
* Enumerations


    * :ref:`ze-fence-flags-t`

 
* Structures


    * :ref:`ze-fence-desc-t`


Fence Functions
------------------------------------------------------------------------------


.. _zeFenceCreate:

zeFenceCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeFenceCreate
    :project: LevelZero


.. _zeFenceDestroy:

zeFenceDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeFenceDestroy
    :project: LevelZero


.. _zeFenceHostSynchronize:

zeFenceHostSynchronize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeFenceHostSynchronize
    :project: LevelZero


.. _zeFenceQueryStatus:

zeFenceQueryStatus
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeFenceQueryStatus
    :project: LevelZero


.. _zeFenceReset:

zeFenceReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeFenceReset
    :project: LevelZero



Fence Enums
------------------------------------------------------------------------------


.. _ze-fence-flags-t:

ze_fence_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_fence_flag_t
    :project: LevelZero

 
Fence Structures
------------------------------------------------------------------------------

.. _ze-fence-desc-t:

ze_fence_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_fence_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Image
============================================================
* Functions


    * :ref:`zeImageGetProperties`
    * :ref:`zeImageCreate`
    * :ref:`zeImageDestroy`

 
* Enumerations


    * :ref:`ze-image-flags-t`
    * :ref:`ze-image-type-t`
    * :ref:`ze-image-format-layout-t`
    * :ref:`ze-image-format-type-t`
    * :ref:`ze-image-format-swizzle-t`
    * :ref:`ze-image-sampler-filter-flags-t`

 
* Structures


    * :ref:`ze-image-format-t`
    * :ref:`ze-image-desc-t`
    * :ref:`ze-image-properties-t`


Image Functions
------------------------------------------------------------------------------


.. _zeImageGetProperties:

zeImageGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeImageGetProperties
    :project: LevelZero


.. _zeImageCreate:

zeImageCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeImageCreate
    :project: LevelZero


.. _zeImageDestroy:

zeImageDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeImageDestroy
    :project: LevelZero



Image Enums
------------------------------------------------------------------------------


.. _ze-image-flags-t:

ze_image_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_flag_t
    :project: LevelZero


.. _ze-image-type-t:

ze_image_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_type_t
    :project: LevelZero


.. _ze-image-format-layout-t:

ze_image_format_layout_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_format_layout_t
    :project: LevelZero


.. _ze-image-format-type-t:

ze_image_format_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_format_type_t
    :project: LevelZero


.. _ze-image-format-swizzle-t:

ze_image_format_swizzle_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_format_swizzle_t
    :project: LevelZero


.. _ze-image-sampler-filter-flags-t:

ze_image_sampler_filter_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_sampler_filter_flag_t
    :project: LevelZero

 
Image Structures
------------------------------------------------------------------------------

.. _ze-image-format-t:

ze_image_format_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_format_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-image-desc-t:

ze_image_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-image-properties-t:

ze_image_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Memory
============================================================
* Functions


    * :ref:`zeMemAllocShared`
    * :ref:`zeMemAllocDevice`
    * :ref:`zeMemAllocHost`
    * :ref:`zeMemFree`
    * :ref:`zeMemGetAllocProperties`
    * :ref:`zeMemGetAddressRange`
    * :ref:`zeMemGetIpcHandle`
    * :ref:`zeMemOpenIpcHandle`
    * :ref:`zeMemCloseIpcHandle`

 
* Enumerations


    * :ref:`ze-device-mem-alloc-flags-t`
    * :ref:`ze-host-mem-alloc-flags-t`
    * :ref:`ze-memory-type-t`
    * :ref:`ze-ipc-memory-flags-t`

 
* Structures


    * :ref:`ze-device-mem-alloc-desc-t`
    * :ref:`ze-host-mem-alloc-desc-t`
    * :ref:`ze-memory-allocation-properties-t`
    * :ref:`ze-external-memory-export-desc-t`
    * :ref:`ze-external-memory-import-fd-t`
    * :ref:`ze-external-memory-export-fd-t`
    * :ref:`ze-external-memory-import-win32-handle-t`
    * :ref:`ze-external-memory-export-win32-handle-t`


Memory Functions
------------------------------------------------------------------------------


.. _zeMemAllocShared:

zeMemAllocShared
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemAllocShared
    :project: LevelZero


.. _zeMemAllocDevice:

zeMemAllocDevice
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemAllocDevice
    :project: LevelZero


.. _zeMemAllocHost:

zeMemAllocHost
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemAllocHost
    :project: LevelZero


.. _zeMemFree:

zeMemFree
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemFree
    :project: LevelZero


.. _zeMemGetAllocProperties:

zeMemGetAllocProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemGetAllocProperties
    :project: LevelZero


.. _zeMemGetAddressRange:

zeMemGetAddressRange
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemGetAddressRange
    :project: LevelZero


.. _zeMemGetIpcHandle:

zeMemGetIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemGetIpcHandle
    :project: LevelZero


.. _zeMemOpenIpcHandle:

zeMemOpenIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemOpenIpcHandle
    :project: LevelZero


.. _zeMemCloseIpcHandle:

zeMemCloseIpcHandle
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeMemCloseIpcHandle
    :project: LevelZero



Memory Enums
------------------------------------------------------------------------------


.. _ze-device-mem-alloc-flags-t:

ze_device_mem_alloc_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_mem_alloc_flag_t
    :project: LevelZero


.. _ze-host-mem-alloc-flags-t:

ze_host_mem_alloc_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_host_mem_alloc_flag_t
    :project: LevelZero


.. _ze-memory-type-t:

ze_memory_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_memory_type_t
    :project: LevelZero


.. _ze-ipc-memory-flags-t:

ze_ipc_memory_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_ipc_memory_flag_t
    :project: LevelZero

 
Memory Structures
------------------------------------------------------------------------------

.. _ze-device-mem-alloc-desc-t:

ze_device_mem_alloc_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_mem_alloc_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-host-mem-alloc-desc-t:

ze_host_mem_alloc_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_host_mem_alloc_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-memory-allocation-properties-t:

ze_memory_allocation_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_memory_allocation_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-external-memory-export-desc-t:

ze_external_memory_export_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_external_memory_export_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-external-memory-import-fd-t:

ze_external_memory_import_fd_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_external_memory_import_fd_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-external-memory-export-fd-t:

ze_external_memory_export_fd_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_external_memory_export_fd_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-external-memory-import-win32-handle-t:

ze_external_memory_import_win32_handle_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_external_memory_import_win32_handle_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-external-memory-export-win32-handle-t:

ze_external_memory_export_win32_handle_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_external_memory_export_win32_handle_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Module
============================================================
* Functions


    * :ref:`zeModuleCreate`
    * :ref:`zeModuleDestroy`
    * :ref:`zeModuleDynamicLink`
    * :ref:`zeModuleBuildLogDestroy`
    * :ref:`zeModuleBuildLogGetString`
    * :ref:`zeModuleGetNativeBinary`
    * :ref:`zeModuleGetGlobalPointer`
    * :ref:`zeModuleGetKernelNames`
    * :ref:`zeModuleGetProperties`
    * :ref:`zeKernelCreate`
    * :ref:`zeKernelDestroy`
    * :ref:`zeModuleGetFunctionPointer`
    * :ref:`zeKernelSetGroupSize`
    * :ref:`zeKernelSuggestGroupSize`
    * :ref:`zeKernelSuggestMaxCooperativeGroupCount`
    * :ref:`zeKernelSetArgumentValue`
    * :ref:`zeKernelSetIndirectAccess`
    * :ref:`zeKernelGetIndirectAccess`
    * :ref:`zeKernelGetSourceAttributes`
    * :ref:`zeKernelSetCacheConfig`
    * :ref:`zeKernelGetProperties`
    * :ref:`zeKernelGetName`
    * :ref:`zeCommandListAppendLaunchKernel`
    * :ref:`zeCommandListAppendLaunchCooperativeKernel`
    * :ref:`zeCommandListAppendLaunchKernelIndirect`
    * :ref:`zeCommandListAppendLaunchMultipleKernelsIndirect`

 
* Enumerations


    * :ref:`ze-module-format-t`
    * :ref:`ze-module-property-flags-t`
    * :ref:`ze-kernel-flags-t`
    * :ref:`ze-kernel-indirect-access-flags-t`
    * :ref:`ze-cache-config-flags-t`

 
* Structures


    * :ref:`ze-module-constants-t`
    * :ref:`ze-module-desc-t`
    * :ref:`ze-module-properties-t`
    * :ref:`ze-kernel-desc-t`
    * :ref:`ze-kernel-uuid-t`
    * :ref:`ze-kernel-properties-t`
    * :ref:`ze-kernel-preferred-group-size-properties-t`
    * :ref:`ze-group-count-t`


Module Functions
------------------------------------------------------------------------------


.. _zeModuleCreate:

zeModuleCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleCreate
    :project: LevelZero


.. _zeModuleDestroy:

zeModuleDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleDestroy
    :project: LevelZero


.. _zeModuleDynamicLink:

zeModuleDynamicLink
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleDynamicLink
    :project: LevelZero


.. _zeModuleBuildLogDestroy:

zeModuleBuildLogDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleBuildLogDestroy
    :project: LevelZero


.. _zeModuleBuildLogGetString:

zeModuleBuildLogGetString
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleBuildLogGetString
    :project: LevelZero


.. _zeModuleGetNativeBinary:

zeModuleGetNativeBinary
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleGetNativeBinary
    :project: LevelZero


.. _zeModuleGetGlobalPointer:

zeModuleGetGlobalPointer
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleGetGlobalPointer
    :project: LevelZero


.. _zeModuleGetKernelNames:

zeModuleGetKernelNames
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleGetKernelNames
    :project: LevelZero


.. _zeModuleGetProperties:

zeModuleGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleGetProperties
    :project: LevelZero


.. _zeKernelCreate:

zeKernelCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelCreate
    :project: LevelZero


.. _zeKernelDestroy:

zeKernelDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelDestroy
    :project: LevelZero


.. _zeModuleGetFunctionPointer:

zeModuleGetFunctionPointer
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeModuleGetFunctionPointer
    :project: LevelZero


.. _zeKernelSetGroupSize:

zeKernelSetGroupSize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSetGroupSize
    :project: LevelZero


.. _zeKernelSuggestGroupSize:

zeKernelSuggestGroupSize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSuggestGroupSize
    :project: LevelZero


.. _zeKernelSuggestMaxCooperativeGroupCount:

zeKernelSuggestMaxCooperativeGroupCount
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSuggestMaxCooperativeGroupCount
    :project: LevelZero


.. _zeKernelSetArgumentValue:

zeKernelSetArgumentValue
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSetArgumentValue
    :project: LevelZero


.. _zeKernelSetIndirectAccess:

zeKernelSetIndirectAccess
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSetIndirectAccess
    :project: LevelZero


.. _zeKernelGetIndirectAccess:

zeKernelGetIndirectAccess
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelGetIndirectAccess
    :project: LevelZero


.. _zeKernelGetSourceAttributes:

zeKernelGetSourceAttributes
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelGetSourceAttributes
    :project: LevelZero


.. _zeKernelSetCacheConfig:

zeKernelSetCacheConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSetCacheConfig
    :project: LevelZero


.. _zeKernelGetProperties:

zeKernelGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelGetProperties
    :project: LevelZero


.. _zeKernelGetName:

zeKernelGetName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelGetName
    :project: LevelZero


.. _zeCommandListAppendLaunchKernel:

zeCommandListAppendLaunchKernel
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendLaunchKernel
    :project: LevelZero


.. _zeCommandListAppendLaunchCooperativeKernel:

zeCommandListAppendLaunchCooperativeKernel
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendLaunchCooperativeKernel
    :project: LevelZero


.. _zeCommandListAppendLaunchKernelIndirect:

zeCommandListAppendLaunchKernelIndirect
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendLaunchKernelIndirect
    :project: LevelZero


.. _zeCommandListAppendLaunchMultipleKernelsIndirect:

zeCommandListAppendLaunchMultipleKernelsIndirect
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeCommandListAppendLaunchMultipleKernelsIndirect
    :project: LevelZero



Module Enums
------------------------------------------------------------------------------


.. _ze-module-format-t:

ze_module_format_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_module_format_t
    :project: LevelZero


.. _ze-module-property-flags-t:

ze_module_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_module_property_flag_t
    :project: LevelZero


.. _ze-kernel-flags-t:

ze_kernel_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_kernel_flag_t
    :project: LevelZero


.. _ze-kernel-indirect-access-flags-t:

ze_kernel_indirect_access_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_kernel_indirect_access_flag_t
    :project: LevelZero


.. _ze-cache-config-flags-t:

ze_cache_config_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_cache_config_flag_t
    :project: LevelZero

 
Module Structures
------------------------------------------------------------------------------

.. _ze-module-constants-t:

ze_module_constants_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_module_constants_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-module-desc-t:

ze_module_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_module_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-module-properties-t:

ze_module_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_module_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-desc-t:

ze_kernel_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-uuid-t:

ze_kernel_uuid_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_uuid_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-properties-t:

ze_kernel_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-kernel-preferred-group-size-properties-t:

ze_kernel_preferred_group_size_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_kernel_preferred_group_size_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-group-count-t:

ze_group_count_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_group_count_t
    :project: LevelZero
    :members:
    :undoc-members:


 

 

Program
============================================================
* Enumerations


    * :ref:`ze-module-program-exp-version-t`

 
* Structures


    * :ref:`ze-module-program-exp-desc-t`




Program Enums
------------------------------------------------------------------------------


.. _ze-module-program-exp-version-t:

ze_module_program_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_module_program_exp_version_t
    :project: LevelZero

 
Program Structures
------------------------------------------------------------------------------

.. _ze-module-program-exp-desc-t:

ze_module_program_exp_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_module_program_exp_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

 

Raytracing
============================================================
* Enumerations


    * :ref:`ze-raytracing-ext-version-t`
    * :ref:`ze-device-raytracing-ext-flags-t`
    * :ref:`ze-raytracing-mem-alloc-ext-flags-t`

 
* Structures


    * :ref:`ze-device-raytracing-ext-properties-t`
    * :ref:`ze-raytracing-mem-alloc-ext-desc-t`




Raytracing Enums
------------------------------------------------------------------------------


.. _ze-raytracing-ext-version-t:

ze_raytracing_ext_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_raytracing_ext_version_t
    :project: LevelZero


.. _ze-device-raytracing-ext-flags-t:

ze_device_raytracing_ext_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_raytracing_ext_flag_t
    :project: LevelZero


.. _ze-raytracing-mem-alloc-ext-flags-t:

ze_raytracing_mem_alloc_ext_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_raytracing_mem_alloc_ext_flag_t
    :project: LevelZero

 
Raytracing Structures
------------------------------------------------------------------------------

.. _ze-device-raytracing-ext-properties-t:

ze_device_raytracing_ext_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_device_raytracing_ext_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-raytracing-mem-alloc-ext-desc-t:

ze_raytracing_mem_alloc_ext_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_raytracing_mem_alloc_ext_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Residency
============================================================
* Functions


    * :ref:`zeContextMakeMemoryResident`
    * :ref:`zeContextEvictMemory`
    * :ref:`zeContextMakeImageResident`
    * :ref:`zeContextEvictImage`

 

 


Residency Functions
------------------------------------------------------------------------------


.. _zeContextMakeMemoryResident:

zeContextMakeMemoryResident
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextMakeMemoryResident
    :project: LevelZero


.. _zeContextEvictMemory:

zeContextEvictMemory
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextEvictMemory
    :project: LevelZero


.. _zeContextMakeImageResident:

zeContextMakeImageResident
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextMakeImageResident
    :project: LevelZero


.. _zeContextEvictImage:

zeContextEvictImage
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeContextEvictImage
    :project: LevelZero



 

 

Sampler
============================================================
* Functions


    * :ref:`zeSamplerCreate`
    * :ref:`zeSamplerDestroy`

 
* Enumerations


    * :ref:`ze-sampler-address-mode-t`
    * :ref:`ze-sampler-filter-mode-t`

 
* Structures


    * :ref:`ze-sampler-desc-t`


Sampler Functions
------------------------------------------------------------------------------


.. _zeSamplerCreate:

zeSamplerCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeSamplerCreate
    :project: LevelZero


.. _zeSamplerDestroy:

zeSamplerDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeSamplerDestroy
    :project: LevelZero



Sampler Enums
------------------------------------------------------------------------------


.. _ze-sampler-address-mode-t:

ze_sampler_address_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_sampler_address_mode_t
    :project: LevelZero


.. _ze-sampler-filter-mode-t:

ze_sampler_filter_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_sampler_filter_mode_t
    :project: LevelZero

 
Sampler Structures
------------------------------------------------------------------------------

.. _ze-sampler-desc-t:

ze_sampler_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_sampler_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Virtual
============================================================
* Functions


    * :ref:`zeVirtualMemReserve`
    * :ref:`zeVirtualMemFree`
    * :ref:`zeVirtualMemQueryPageSize`
    * :ref:`zePhysicalMemCreate`
    * :ref:`zePhysicalMemDestroy`
    * :ref:`zeVirtualMemMap`
    * :ref:`zeVirtualMemUnmap`
    * :ref:`zeVirtualMemSetAccessAttribute`
    * :ref:`zeVirtualMemGetAccessAttribute`

 
* Enumerations


    * :ref:`ze-memory-access-attribute-t`
    * :ref:`ze-physical-mem-flags-t`

 
* Structures


    * :ref:`ze-physical-mem-desc-t`


Virtual Functions
------------------------------------------------------------------------------


.. _zeVirtualMemReserve:

zeVirtualMemReserve
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemReserve
    :project: LevelZero


.. _zeVirtualMemFree:

zeVirtualMemFree
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemFree
    :project: LevelZero


.. _zeVirtualMemQueryPageSize:

zeVirtualMemQueryPageSize
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemQueryPageSize
    :project: LevelZero


.. _zePhysicalMemCreate:

zePhysicalMemCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zePhysicalMemCreate
    :project: LevelZero


.. _zePhysicalMemDestroy:

zePhysicalMemDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zePhysicalMemDestroy
    :project: LevelZero


.. _zeVirtualMemMap:

zeVirtualMemMap
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemMap
    :project: LevelZero


.. _zeVirtualMemUnmap:

zeVirtualMemUnmap
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemUnmap
    :project: LevelZero


.. _zeVirtualMemSetAccessAttribute:

zeVirtualMemSetAccessAttribute
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemSetAccessAttribute
    :project: LevelZero


.. _zeVirtualMemGetAccessAttribute:

zeVirtualMemGetAccessAttribute
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeVirtualMemGetAccessAttribute
    :project: LevelZero



Virtual Enums
------------------------------------------------------------------------------


.. _ze-memory-access-attribute-t:

ze_memory_access_attribute_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_memory_access_attribute_t
    :project: LevelZero


.. _ze-physical-mem-flags-t:

ze_physical_mem_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_physical_mem_flag_t
    :project: LevelZero

 
Virtual Structures
------------------------------------------------------------------------------

.. _ze-physical-mem-desc-t:

ze_physical_mem_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_physical_mem_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

 

Floatatomics
============================================================
* Enumerations


    * :ref:`ze-float-atomics-ext-version-t`
    * :ref:`ze-device-fp-atomic-ext-flags-t`

 
* Structures


    * :ref:`ze-float-atomic-ext-properties-t`




Floatatomics Enums
------------------------------------------------------------------------------


.. _ze-float-atomics-ext-version-t:

ze_float_atomics_ext_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_float_atomics_ext_version_t
    :project: LevelZero


.. _ze-device-fp-atomic-ext-flags-t:

ze_device_fp_atomic_ext_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_device_fp_atomic_ext_flag_t
    :project: LevelZero

 
Floatatomics Structures
------------------------------------------------------------------------------

.. _ze-float-atomic-ext-properties-t:

ze_float_atomic_ext_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_float_atomic_ext_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Globaloffset
============================================================
* Functions


    * :ref:`zeKernelSetGlobalOffsetExp`

 
* Enumerations


    * :ref:`ze-global-offset-exp-version-t`

 


Globaloffset Functions
------------------------------------------------------------------------------


.. _zeKernelSetGlobalOffsetExp:

zeKernelSetGlobalOffsetExp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSetGlobalOffsetExp
    :project: LevelZero



Globaloffset Enums
------------------------------------------------------------------------------


.. _ze-global-offset-exp-version-t:

ze_global_offset_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_global_offset_exp_version_t
    :project: LevelZero

 

 

 

Relaxedalloclimits
============================================================
* Enumerations


    * :ref:`ze-relaxed-allocation-limits-exp-version-t`
    * :ref:`ze-relaxed-allocation-limits-exp-flags-t`

 
* Structures


    * :ref:`ze-relaxed-allocation-limits-exp-desc-t`




Relaxedalloclimits Enums
------------------------------------------------------------------------------


.. _ze-relaxed-allocation-limits-exp-version-t:

ze_relaxed_allocation_limits_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_relaxed_allocation_limits_exp_version_t
    :project: LevelZero


.. _ze-relaxed-allocation-limits-exp-flags-t:

ze_relaxed_allocation_limits_exp_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_relaxed_allocation_limits_exp_flag_t
    :project: LevelZero

 
Relaxedalloclimits Structures
------------------------------------------------------------------------------

.. _ze-relaxed-allocation-limits-exp-desc-t:

ze_relaxed_allocation_limits_exp_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_relaxed_allocation_limits_exp_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Cachereservation
============================================================
* Functions


    * :ref:`zeDeviceReserveCacheExt`
    * :ref:`zeDeviceSetCacheAdviceExt`

 
* Enumerations


    * :ref:`ze-cache-reservation-ext-version-t`
    * :ref:`ze-cache-ext-region-t`

 
* Structures


    * :ref:`ze-cache-reservation-ext-desc-t`


Cachereservation Functions
------------------------------------------------------------------------------


.. _zeDeviceReserveCacheExt:

zeDeviceReserveCacheExt
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceReserveCacheExt
    :project: LevelZero


.. _zeDeviceSetCacheAdviceExt:

zeDeviceSetCacheAdviceExt
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeDeviceSetCacheAdviceExt
    :project: LevelZero



Cachereservation Enums
------------------------------------------------------------------------------


.. _ze-cache-reservation-ext-version-t:

ze_cache_reservation_ext_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_cache_reservation_ext_version_t
    :project: LevelZero


.. _ze-cache-ext-region-t:

ze_cache_ext_region_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_cache_ext_region_t
    :project: LevelZero

 
Cachereservation Structures
------------------------------------------------------------------------------

.. _ze-cache-reservation-ext-desc-t:

ze_cache_reservation_ext_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_cache_reservation_ext_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Eventquerytimestamps
============================================================
* Functions


    * :ref:`zeEventQueryTimestampsExp`

 
* Enumerations


    * :ref:`ze-event-query-timestamps-exp-version-t`

 


Eventquerytimestamps Functions
------------------------------------------------------------------------------


.. _zeEventQueryTimestampsExp:

zeEventQueryTimestampsExp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeEventQueryTimestampsExp
    :project: LevelZero



Eventquerytimestamps Enums
------------------------------------------------------------------------------


.. _ze-event-query-timestamps-exp-version-t:

ze_event_query_timestamps_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_event_query_timestamps_exp_version_t
    :project: LevelZero

 

 

Imagememoryproperties
============================================================
* Functions


    * :ref:`zeImageGetMemoryPropertiesExp`

 
* Enumerations


    * :ref:`ze-image-memory-properties-exp-version-t`

 
* Structures


    * :ref:`ze-image-memory-properties-exp-t`


Imagememoryproperties Functions
------------------------------------------------------------------------------


.. _zeImageGetMemoryPropertiesExp:

zeImageGetMemoryPropertiesExp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeImageGetMemoryPropertiesExp
    :project: LevelZero



Imagememoryproperties Enums
------------------------------------------------------------------------------


.. _ze-image-memory-properties-exp-version-t:

ze_image_memory_properties_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_memory_properties_exp_version_t
    :project: LevelZero

 
Imagememoryproperties Structures
------------------------------------------------------------------------------

.. _ze-image-memory-properties-exp-t:

ze_image_memory_properties_exp_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_memory_properties_exp_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Imageview
============================================================
* Functions


    * :ref:`zeImageViewCreateExp`

 
* Enumerations


    * :ref:`ze-image-view-exp-version-t`

 


Imageview Functions
------------------------------------------------------------------------------


.. _zeImageViewCreateExp:

zeImageViewCreateExp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeImageViewCreateExp
    :project: LevelZero



Imageview Enums
------------------------------------------------------------------------------


.. _ze-image-view-exp-version-t:

ze_image_view_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_view_exp_version_t
    :project: LevelZero

 

 

 

Imageviewplanar
============================================================
* Enumerations


    * :ref:`ze-image-view-planar-exp-version-t`

 
* Structures


    * :ref:`ze-image-view-planar-exp-desc-t`




Imageviewplanar Enums
------------------------------------------------------------------------------


.. _ze-image-view-planar-exp-version-t:

ze_image_view_planar_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_image_view_planar_exp_version_t
    :project: LevelZero

 
Imageviewplanar Structures
------------------------------------------------------------------------------

.. _ze-image-view-planar-exp-desc-t:

ze_image_view_planar_exp_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_image_view_planar_exp_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Kernelschedulinghints
============================================================
* Functions


    * :ref:`zeKernelSchedulingHintExp`

 
* Enumerations


    * :ref:`ze-scheduling-hints-exp-version-t`
    * :ref:`ze-scheduling-hint-exp-flags-t`

 
* Structures


    * :ref:`ze-scheduling-hint-exp-properties-t`
    * :ref:`ze-scheduling-hint-exp-desc-t`


Kernelschedulinghints Functions
------------------------------------------------------------------------------


.. _zeKernelSchedulingHintExp:

zeKernelSchedulingHintExp
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zeKernelSchedulingHintExp
    :project: LevelZero



Kernelschedulinghints Enums
------------------------------------------------------------------------------


.. _ze-scheduling-hints-exp-version-t:

ze_scheduling_hints_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_scheduling_hints_exp_version_t
    :project: LevelZero


.. _ze-scheduling-hint-exp-flags-t:

ze_scheduling_hint_exp_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_scheduling_hint_exp_flag_t
    :project: LevelZero

 
Kernelschedulinghints Structures
------------------------------------------------------------------------------

.. _ze-scheduling-hint-exp-properties-t:

ze_scheduling_hint_exp_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_scheduling_hint_exp_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _ze-scheduling-hint-exp-desc-t:

ze_scheduling_hint_exp_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: ze_scheduling_hint_exp_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

 

Linkonceodr
============================================================
* Enumerations


    * :ref:`ze-linkonce-odr-ext-version-t`

 




Linkonceodr Enums
------------------------------------------------------------------------------


.. _ze-linkonce-odr-ext-version-t:

ze_linkonce_odr_ext_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_linkonce_odr_ext_version_t
    :project: LevelZero

 

 

 

Subgroups
============================================================
* Enumerations


    * :ref:`ze-subgroup-ext-version-t`

 




Subgroups Enums
------------------------------------------------------------------------------


.. _ze-subgroup-ext-version-t:

ze_subgroup_ext_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: ze_subgroup_ext_version_t
    :project: LevelZero

 

